--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@
   transform: translateY(-50%);
 }
 .hero {
-  background-image: url(../assets/1.png);
+  background-image: url(../assets/1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
