Updating the copy to remove ML from CAS, fixing minor details in markup and css classes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -89,7 +89,7 @@ a.button {
     padding: 15px;
 }
 
-.row {
+.flex-row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
