--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -52,7 +52,7 @@ button {
     --color-hex-active: var(--color-pet-blue-dark);
     --color-ex-number: var(--color-blue-50);
     --color-update-card-text: var(--color-black);
-    --color-update-card-bg: rgba(255, 255, 255, 0.5);
+    --color-update-card-bg: var(--color-white);
     --color-update-card-border: var(--color-blue-shadow);
     --color-update-card-footer-bg: var(--color-pet-blue-shaded);
 
@@ -124,10 +124,10 @@ header .header-logo {
 /* || Main page elements */
 h1 {
     color: var(--color-main-heading-text);
-    font-size: 50px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 300;
-    line-height: 61px;
+    line-height: 48px;
     letter-spacing: 0em;
     text-align: center;
 }
@@ -306,7 +306,6 @@ h3 {
 .updates-container {
     color: var(--color-update-card-text);
     width: var(--min-width);
-    height: 525px;
     overflow-y: scroll;
     display: flex;
     flex-direction: row;
@@ -324,8 +323,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 1px solid var(--color-update-card-border);
-    border-radius: 2px;
+    border-radius: 4px;
 }
 
 .up-card-logo {
