--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -206,7 +206,7 @@ h3 {
 
 /* || Example section */
 #examples {
-    height: 750px;
+    min-height: 750px;
     margin-top: -70px;
 }
 
@@ -467,3 +467,15 @@ h3 {
 .footer {
     background-color: var(--color-footer-bg);
 }
+
+.oss-container {
+    width: 100%;
+    min-height: 700px;
+}
+
+.oss-container iframe {
+    border: none;
+    width: 100%;
+    height: 700px;
+    margin: 20px auto;
+  }
